# udex_to_xhand

./: .gitignore  CLAUDE.md  CMakeLists.txt  SPEC.md  config.yaml  example.json  joint_mapper.py  main.py  readme.md  safety.py  udcap_receiver.py  xhand_driver.py
docs/: verified-mapping.md
docs/decisions/: 001-udcap-param-lookup-by-name.md  002-stub-mapper-sign-flip.md  003-config-full-schema-upfront.md  004-driver-noop-main-owns-print.md  005-drain-to-latest-not-one-per-call.md  006-calib-status-report-not-filter.md  007-nonblocking-socket-not-timeout.md  008-fix-busy-spin-on-no-data.md  009-docs-over-experimental-identification.md  010-no-wrist-params-in-json-sdk.md  011-distal-first-parameter-ordering.md  012-discard-five-udcap-params.md  013-thumb-roll-non-contiguous-source.md  014-xhand-serial-is-cdc-acm.md  015-auto-discover-hand-id-mapping.md  016-prebuild-handcommand-template.md  017-log-not-crash-on-send-errors.md  018-mode0-does-not-achieve-powerless.md  019-defer-sdk-import-for-mock-mode.md  020-degree-domain-clamping-inside-mapper.md  021-two-layer-clamping-defense-in-depth.md  022-joint-order-constant-as-config-bridge.md  023-roadmap-pivot-g1-pc2-as-host.md  024-vendor-sample-as-m5a-harness.md  025-vendor-source-pristine-sed-not-committed.md  026-m5a-uses-vendor-pid-defaults-not-claudemd.md  027-joint4-index-as-m5a-smoke-joint.md  028-pure-cpp-rewrite-no-binding.md  029-calibrationstatus-precheck-udcap-side-only.md  030-snapshot-fixture-sha256-self-check.md  031-legacy-python-reorg-during-m5b.md  032-preset-actions-header-only-with-python-byte-equality.md  033-latency-stats-vector-sort-not-streaming.md  034-actions-mode-tolerates-missing-config.md  035-watchdog-stale-resend.md  036-startup-gate-timeout.md  037-snapshot-fixture-regen-on-config-schema-change.md  038-watchdog-recovered-semantic-is-time-since-last-warn.md  039-rs485-two-port-split.md  041-dual-mode-latency-doubles-baseline.md  (+7 more)
docs/plans/: 00-roadmap.md  20260427-m0-skeleton-plan.md  20260427-m1-udp-receiver-plan.md  20260427-m2-udcap-param-verify-plan.md  20260427-m3-xhand-driver-plan.md  20260427-m4-single-hand-teleop-plan.md  20260516-m5a-vendor-sdk-pc2-bringup-plan.md  20260518-m5b-cpp-rewrite-plan.md  20260518-m5c-pc2-hardware-revalidation-plan.md  20260519-m6-safety-hardening-plan.md  20260519-m7-dual-hand-integration-plan.md  20260521-m8-path-a-runbook.md  20260521-m8-tuning-acceptance-plan.md
docs/superpowers/specs/: 2026-06-28-lerobot-binary-hand-sdk-design.md
legacy_python/: README.md  joint_mapper.py  test_udcap_connection.py  udcap_receiver.py  xhand_driver.py
scripts/: dump_mapper_baseline.py  lerobot_udp_test_sender.py  record_udcap_thumb_sequences.py  thumb_retarget_prototype.py  udcap_param_identify.py  verify_flag_false_byte_identical.sh
src/: calibrate_udcap.hpp  cli.cpp  cli.hpp  joint_mapper.cpp  joint_mapper.hpp  lerobot_hand_controller.cpp  lerobot_hand_controller.hpp  lerobot_hand_main.cpp  lerobot_receiver.cpp  lerobot_receiver.hpp  logging.hpp  main.cpp  preset_actions.hpp  safety.cpp  safety.hpp  udcap_receiver.cpp  udcap_receiver.hpp  xhand_driver.cpp  xhand_driver.hpp
tests/: test_mapper_snapshot.cpp  test_safety.cpp
tests/fixtures/: mapper_baseline.json  mapper_baseline_m7_frozen.json
udcap关节文档/: HandDriver Initial Hand Mode Joint Position.txt  vr_gloves_init.fbx
xhand_control_ros2/: README.md  README.zh-CN.md
xhand_control_ros2/xhand_control_interfaces/: CMakeLists.txt  package.xml
xhand_control_ros2/xhand_control_interfaces/msg/: FingerSensorState.msg  XHandCommand.msg  XHandSensorState.msg  XHandSensorStateArray.msg  XHandState.msg  XHandStateArray.msg
xhand_control_ros2/xhand_control_interfaces/srv/: ReadHandInfo.srv  ResetSensor.srv  SetHandId.srv  SetHandName.srv
xhand_control_ros2/xhand_control_ros2/: CMakeLists.txt  package.xml
xhand_control_ros2/xhand_control_ros2/config/: xhand_config.yaml
xhand_control_ros2/xhand_control_ros2/include/xhand_control_ros2/: xhand_control_ros2.hpp
xhand_control_ros2/xhand_control_ros2/launch/: xhand_control.launch.py
xhand_control_ros2/xhand_control_ros2/scripts/: setup.bash.in
xhand_control_ros2/xhand_control_ros2/src/: xhand_control_ros2_node.cpp
xhand_control_ros2/xhand_control_ros2/src/xhand_control_ros2/: xhand_control_ros2.cpp
xhand_control_ros2/xhand_control_ros2/xhand_control/: README.md
xhand_control_ros2/xhand_control_ros2/xhand_control/include/: serial_communication.hpp
xhand_control_ros2/xhand_control_ros2/xhand_control/share/xhand_control/cmake/: xhand_controlConfig.cmake
xhand_control_ros2/xhand_control_ros2/xhand_control/tests/src/: ethercat_test.cpp  serial_test.cpp
xhand_control_sdk/: README.zh-CN.md
xhand_control_sdk/include/: communication_interface.hpp  data_type.hpp  error_manager.hpp  ethercat_communication.hpp  ev_boot.h  ip_util.hpp  xhand_control.hpp
xhand_control_sdk/share/xhand_control/cmake/: xhand_controlConfig.cmake
xhand_control_sdk/tests/: CMakeLists.txt
xhand_control_sdk/tests/src/: ethercat_test.cpp  serial_test.cpp
xhand中文文档/: X-Hand 1 用户快速使用说明.url
